@@ -131,7 +131,7 @@ devpoll_init(struct event_base *base)
 	struct devpollop *devpollop;
 
 	/* Disable devpoll when this environment variable is set */
-	if (getenv("EVENT_NODEVPOLL"))
+	if (evutil_getenv("EVENT_NODEVPOLL"))
 		return (NULL);
 
 	if (!(devpollop = calloc(1, sizeof(struct devpollop))))
