@@ -63,7 +63,6 @@
 #include "event.h"
 #include "event-internal.h"
 #include "log.h"
-#include "event-internal.h"
 
 #define EVLIST_X_KQINKERNEL	0x1000
 
@@ -103,7 +102,7 @@ kq_init(struct event_base *base)
 	struct kqop *kqueueop;
 
 	/* Disable kqueue when this environment variable is set */
-	if (getenv("EVENT_NOKQUEUE"))
+	if (evutil_getenv("EVENT_NOKQUEUE"))
 		return (NULL);
 
 	if (!(kqueueop = calloc(1, sizeof(struct kqop))))
